python_scripts/nohup.out
  File "fall_app_server.py", line 25
    if (len(fields) >= 20)
                         ^
SyntaxError: invalid syntax
  File "fall_app_server.py", line 27
    else 
        ^
SyntaxError: invalid syntax
Error @ /home/ec2-user/ummdp/logfiles/108/app/2013/elibdmz-elibweb_usage.log.2013-08-2929 Aug 2013 20:58:49,179: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|24.23.15.220;;|%0A%3Eset=search&dictionaryClick=&secondaryNav=&groupid=1&requesti%0A%3Ed=lib_standard&resultid=4&edition=&ts=9FE9CB6A254BD94FCAB2AC%0A%3E0402F600E9_1377799116990&start=1&publicationId=&urn=urn%3Abi%0A%3Egchalk%3AUS%3BBCLib%3Bdocument%3B127037762;;|_DOC_RETRIEVAL;;Document;;|;;|urn:bi

Error @ /home/ec2-user/ummdp/logfiles/108/app/2013/elibdmz-elibweb_usage.log.2013-08-2929 Aug 2013 20:59:34,397: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|24.23.15.220;;|%0A%3Eset=search&dictionaryClick=&secondaryNav=&groupid=1&requesti%0A%3Ed=lib_standard&resultid=4&edition=&ts=9FE9CB6A254BD94FCAB2AC%0A%3E0402F600E9_1377799116990&start=1&publicationId=&urn=urn%3Abi%0A%3Egchalk%3AUS%3BBCLib%3Bdocument%3B127037762;;|_DOC_RETRIEVAL;;Document;;|;;|urn:bi

Error @ /home/ec2-user/ummdp/logfiles/108/app/2013/elibdmz-elibweb_usage.log.2013-08-2929 Aug 2013 20:59:49,851: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|24.23.15.220;;|%0A%3Eset=search&dictionaryClick=&secondaryNav=&groupid=1&requesti%0A%3Ed=lib_standard&resultid=4&edition=&ts=9FE9CB6A254BD94FCAB2AC%0A%3E0402F600E9_1377799116990&start=1&publicationId=&urn=urn%3Abi%0A%3Egchalk%3AUS%3BBCLib%3Bdocument%3B127037762;;|_DOC_RETRIEVAL;;Document;;|;;|urn:bi

Error @ /home/ec2-user/ummdp/logfiles/108/app/2013/elibdmz-elibweb_usage.log.2013-08-2929 Aug 2013 21:00:44,885: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|24.23.15.220;;|%0A%3Eset=search&dictionaryClick=&secondaryNav=&groupid=1&requesti%0A%3Ed=lib_standard&resultid=4&edition=&ts=9FE9CB6A254BD94FCAB2AC%0A%3E0402F600E9_1377799116990&start=1&publicationId=&urn=urn%3Abi%0A%3Egchalk%3AUS%3BBCLib%3Bdocument%3B127037762;;|_DOC_RETRIEVAL;;Document;;|;;|urn:bi

Error @ /home/ec2-user/ummdp/logfiles/108/app/2013/elibdmz-elibweb_usage.log.2013-08-2929 Aug 2013 21:04:02,264: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|24.23.15.220;;|%0A%3Eset=search&dictionaryClick=&secondaryNav=&groupid=1&requesti%0A%3Ed=lib_standard&resultid=4&edition=&ts=9FE9CB6A254BD94FCAB2AC%0A%3E0402F600E9_1377799116990&start=1&publicationId=&urn=urn%3Abi%0A%3Egchalk%3AUS%3BBCLib%3Bdocument%3B127037762;;|_DOC_RETRIEVAL;;Document;;|;;|urn:bi

Error @ /home/ec2-user/ummdp/logfiles/106/app/2013/elibdmz-elibweb_usage.log.2013-10-1414 Oct 2013 21:58:54,798: ;;|TransformServlet;;|DB-ELCLASS2-K12;;|GET;;|/elibweb/elib/do/document;;|107.196.9.65;;|set=search&dictionaryClick=&seconda%0AryNav=&groupid=1&requestid=lib_standard&resultid=7&edition=&ts=201E92463D42BFB9C0C0%0AF4339DDE50DC_1381260513238&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLi%0Ab%3Bdocument%3B172797025;;|SEARCH_DOC_RETRIEVAL;;Document;;|;;|urn:bigchalk:US;BCLi

Error @ /home/ec2-user/ummdp/logfiles/103/app/2013/elibdmz-elibweb_usage.log.2013-11-1212 Nov 2013 17:12:37,680: ;;|TransformServlet;;|DB-ELCLASS2-K12;;|GET;;|/elibweb/elib/do/document;;|50.88.181.36;;|set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=1&edition=&ts=E7CEE53701F49A4E588759D008A340A4_1383834266754&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B86538056%20%20%20%20%0dhttp://www.cis.org/node/1582;;|SEARCH_DOC_RETRIEVAL;;Document;;|;;|urn:bigchalk:US;BCLib;document;86538056    

Error @ /home/ec2-user/ummdp/logfiles/103/app/2013/elibdmz-elibweb_usage.log.2013-11-1212 Nov 2013 17:12:40,442: ;;|TransformServlet;;|DB-ELCLASS2-K12;;|GET;;|/elibweb/elib/do/document;;|50.88.181.36;;|set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=1&edition=&ts=E7CEE53701F49A4E588759D008A340A4_1383834266754&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B86538056%20%20%20%20%0dhttp://www.cis.org/node/1582;;|SEARCH_DOC_RETRIEVAL;;Document;;|;;|urn:bigchalk:US;BCLib;document;86538056    

Error @ /home/ec2-user/ummdp/logfiles/103/app/2013/elibdmz-elibweb_usage.log.2013-11-1212 Nov 2013 17:51:48,161: ;;|TransformServlet;;|DB-ELCLASS2-K12;;|GET;;|/elibweb/elib/do/document;;|50.88.181.36;;|set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=1&edition=&ts=E7CEE53701F49A4E588759D008A340A4_1383834266754&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B86538056%20%20%20%20%0dhttp://www.cis.org/node/1582;;|SEARCH_DOC_RETRIEVAL;;Document;;|;;|urn:bigchalk:US;BCLib;document;86538056    

Error @ /home/ec2-user/ummdp/logfiles/103/app/2013/elibdmz-elibweb_usage.log.2013-11-1212 Nov 2013 17:52:01,948: ;;|TransformServlet;;|DB-ELCLASS2-K12;;|GET;;|/elibweb/elib/do/document;;|50.88.181.36;;|set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=1&edition=&ts=E7CEE53701F49A4E588759D008A340A4_1383834266754&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B86538056%20%20%20%20%0dhttp://www.cis.org/node/1582;;|SEARCH_DOC_RETRIEVAL;;Document;;|;;|urn:bigchalk:US;BCLib;document;86538056    

Error @ /home/ec2-user/ummdp/logfiles/109/app/2014/elibdmz-elibweb_usage.log.2014-01-1515 Jan 2014 14:24:15,929: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|64.160.149.20;;|%0A%3Eset=search&dictionaryClick=&secondaryNav=&groupid=1&requesti%0A%3Ed=lib_standard&resultid=22&edition=&ts=68A64169585E572A06601%0A%3E69CAA7F7895_1389728523120&start=1&publicationId=&urn=urn%3Ab%0A%3Eigchalk%3AUS%3BBCLib%3Bdocument%3B97300234;;|_DOC_RETRIEVAL;;Document;;|;;|urn:b

Error @ /home/ec2-user/ummdp/logfiles/109/app/2014/elibdmz-elibweb_usage.log.2014-01-1515 Jan 2014 14:24:50,102: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|64.160.149.20;;|%0A%3Eset=search&dictionaryClick=&secondaryNav=&groupid=1&requesti%0A%3Ed=lib_standard&resultid=17&edition=&ts=68A64169585E572A06601%0A%3E69CAA7F7895_1389728523120&start=1&publicationId=&urn=urn%3Ab%0A%3Eigchalk%3AUS%3BBCLib%3Bdocument%3B28352438;;|_DOC_RETRIEVAL;;Document;;|;;|urn:b

Error @ /home/ec2-user/ummdp/logfiles/107/app/2014/elibdmz-elibweb_usage.log.2014-02-0505 Feb 2014 21:22:48,194: ;;|TransformServlet;;|DB-ELCLASS2-CURRICULUM;;|GET;;|/elibweb/curriculum/do/document;;|47.21.2.222;;|set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=1&edition=&ts=76CA7BFE93522D41734F3A04753B6D91_1391651559339&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B218237028%0A%0Ahttp://elibrary.bigchalk.com/elibweb/curriculum/do/document?set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=2&edition=&ts=76CA7BFE93522D41734F3A04753B6D91_1391651623064&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B165549972%0A%0Ahttp://elibrary.bigchalk.com/elibweb/curriculum/do/document?set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=1&edition=&ts=76CA7BFE93522D41734F3A04753B6D91_1391651852231&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B222843538%0A%0Ahttp://elibrary.bigchalk.com/elibweb/curriculum/do/document?set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=2&edition=&ts=76CA7BFE93522D41734F3A04753B6D91_1391651906164&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B222812844%0A%0Ahttp://elibrary.bigchalk.com/elibweb/curriculum/do/document?set=search&dictionaryClick=&secondaryNav=&groupid=1&requestid=lib_standard&resultid=2&edition=&ts=76CA7BFE93522D41734F3A04753B6D91_1391652171707&start=1&publicationId=&urn=urn%3Abigchalk%3AUS%3BBCLib%3Bdocument%3B96463976;;|SEARCH_DOC_RETRIEVAL;;Document;;|;;|urn:bigchalk:US;BCLib;document;218237028

Error @ /home/ec2-user/ummdp/logfiles/107/app/2014/elibdmz-elibweb_usage.log.2014-02-05

